Theme/ElegantFin-theme-nightly.css
/* ... */
@media (max-width: 100em) {
    /* this makes the font size consistent */
    .sectionTabs {
        font-size: 100%;
    }

    /* this keeps the section tabs expanded on TVs under 100em width */
    .layout-tv .sectionTabs {
        margin-top: unset;
    }

    /* this increases page top padding when section tabs are expanded on TVs*/
    .layout-tv .libraryPage:not(.noSecondaryNavPage) {
        padding-top: calc(var(--appBarHeight) * 2 + 0.5em) !important;
    }
}

@media (max-width: 75em) {
    /* these margins are applied only on phones, not tablets*/
    .layout-mobile .sectionTabs .emby-tab-button:first-child {
        margin-left: var(--sidePadding);
    }

    .layout-mobile .sectionTabs .emby-tab-button:last-child {
        margin-right: var(--sidePadding);
    }
}

.layout-tv .headerLeft {
    overflow: unset;
    margin: 0em 0.6em;
}

/* this allows switching between the header styles easily */
#reactRoot > div:nth-child(3) {
    container-name: skinHeader;
    container-type: size;
    height: var(--appBarHeight);
    max-height: var(--appBarHeight);
    position: sticky;
    top: 0;
    z-index: 1099;
}

.touch-menu-la {
    z-index: 1099;
}

@container skinHeader (min-height: 4.9em) {
    /* this is the alternative faded app bar */
    .skinHeader-blurred:not(.osdHeader):not(.semiTransparent) {
        backdrop-filter: none;
        background-color: transparent;
        border: none;
        background: var(--headerBackground);
        padding: 0;
    }

    .skinHeader-blurred:not(.osdHeader):not(.semiTransparent)::after {
        content: var(--headerBlurLayerVisibility);
        position: absolute;
        top: 0;
        bottom: 0;
        left: 0;
        right: 0;
        backdrop-filter: var(--blurLargest);
        -webkit-mask: var(--headerBlurMask);
        mask: var(--headerBlurMask);
        z-index: -1;
    }

    .sectionTabs {
        padding-bottom: 1.5em;
    }

    .layout-mobile .sectionTabs {
        align-content: center;
    }
}

.skinHeader {
    /* this is for testing a fix for iOS  */
    padding-top: max(env(safe-area-inset-top), var(--safe-area-inset-top)) !important;
}

.nowPlayingPage {
    background: linear-gradient(var(--darkerGradientPointAlpha), transparent);
}

.remoteControlContent {
    padding: 0 var(--sidePadding) !important;
    background: linear-gradient(transparent, var(--darkerGradientPointAlpha) 20em);
}

/* performance improvements fot low-end TVs - start */

/* .layout-tv *,
.layout-tv *::before,
.layout-tv *::after {
    transition-duration: .1s;
    backdrop-filter: none !important;
    -webkit-backdrop-filter: none !important;
    box-shadow: none;
    text-shadow: none;
    filter: none !important;
    -webkit-filter: none !important;
} */

/* .layout-tv .show-focus:not(.card):focus,
.layout-tv .show-animation:not(.card):focus {
    transform: none !important;
} */

/* .layout-tv .blurhash-canvas {
    display: none !important;
} */

/* .layout-tv .emby-checkbox:focus + span + .checkboxOutline {
    transform: scale(1.75);
} */

.layout-tv .show-focus:focus,
.layout-tv .show-animation:focus,
.emby-select-focusscale:focus {
    transform: none !important;
}

.layout-tv .focuscontainer,
.layout-tv .backdropImage {
    animation-duration: 0s !important;
    backdrop-filter: none;
}

.card.show-animation .cardBox {
    transition:
        transform 0.05s ease-out,
        -webkit-transform 0.05s ease-out;
}

/* performance improvements fot low-end TVs - end */

/* basic styling for the Media Bar Plugin - start
for extended styling, use the add-on */

#slides-container {
    top: calc(-0.5 * var(--appBarHeight));
}

.backdrop-overlay {
    background: linear-gradient(
        var(--lighterGradientPoint),
        var(--gradientPointAlpha),
        60%,
        var(--darkerGradientPointAlpha)
    );
}

.plot {
    color: var(--textColor);
    text-shadow: 1px 1px var(--lighterGradientPointAlpha);
}

.button-container {
    align-items: center;
}

.favorite-button {
    background: none;
    color: var(--textColor);
}

.detail-button:hover,
.favorite-button:hover {
    background: var(--dimTextColor);
    color: black;
}

/* basic styling for the Media Bar Plugin - end */

